--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ CLOUD_API_KEY= '876161638251177',
 CLOUD_API_SECRET= 'E4sTs38QsjdCrjJii5w3igSQkwI',
 EMAIL_HOST_USER='albaraasalamh@gmail.com'
 EMAIL_HOST_PASSWORD= 'lluv ypnn gqmv rmns'
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
+DJANGO_ALLOWED_HOSTS_PROD=brubox.onrender.com
