--- a/.env
+++ b/.env
@@ -1,14 +1,28 @@
+# 🌐 وضع الإنتاج
 DJANGO_PRODUCTION=True
-DJANGO_SECRET_KEY="wy2=g91c0!s#4s6gexab7$_zw%g1e29$(d3quc2h!vz-y(2fzn"
+
+# 🔐 مفتاح السر لتشغيل Django (سري جدًا)
+DJANGO_SECRET_KEY=wy2=g91c0!s#4s6gexab7$_zw%g1e29$(d3quc2h!vz-y(2fzn
+
+# 🖥️ إعدادات قاعدة البيانات (PostgreSQL على Render)
 DB_NAME=db_brubox
 DB_USER=db_brubox_user
 DB_PASSWORD=exeAzrE0Byn7r3JcZnGe9w8bpn8TuGfX
 DB_HOST=dpg-d20fh8h5pdvs73cgfd40-a
 DB_PORT=5432
-CLOUD_NAME= 'dc5vo8ik6',
-CLOUD_API_KEY= '876161638251177',
-CLOUD_API_SECRET= 'E4sTs38QsjdCrjJii5w3igSQkwI',
-EMAIL_HOST_USER='albaraasalamh@gmail.com'
-EMAIL_HOST_PASSWORD= 'lluv ypnn gqmv rmns'
+
+# ☁️ إعدادات Cloudinary
+CLOUD_NAME=dc5vo8ik6
+CLOUD_API_KEY=876161638251177
+CLOUD_API_SECRET=E4sTs38QsjdCrjJii5w3igSQkwI
+
+# 📬 البريد الإلكتروني (Gmail)
+EMAIL_HOST_USER=albaraasalamh@gmail.com
+EMAIL_HOST_PASSWORD=lluv ypnn gqmv rmns
+
+# 🌍 النطاقات المسموح بها
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 DJANGO_ALLOWED_HOSTS_PROD=brubox.onrender.com
+
+# 🐞 لتفعيل عرض الأخطاء مؤقتًا (اختياري أثناء التصحيح فقط)
+# DEBUG=True
