--- a/.env
+++ b/.env
@@ -4,12 +4,11 @@ DJANGO_PRODUCTION=True
 # 🔐 مفتاح السر لتشغيل Django (سري جدًا)
 DJANGO_SECRET_KEY=wy2g91c0!s#4s6gexab7$_zw%g1e29$(d3quc2h!vz-y(2fzn
 
-
 # 🖥️ إعدادات قاعدة البيانات (PostgreSQL على Render)
 DB_NAME=db_brubox
 DB_USER=db_brubox_user
 DB_PASSWORD=exeAzrE0Byn7r3JcZnGe9w8bpn8TuGfX
-DB_HOST=dpg-d20fh8h5pdvs73cgfd40-a
+DB_HOST=dpg-d20fh8h5pdvs73cgfd40-a.oregon-postgres.render.com
 DB_PORT=5432
 
 # ☁️ إعدادات Cloudinary
@@ -27,3 +26,6 @@ DJANGO_ALLOWED_HOSTS_PROD=brubox.onrender.com
 
 # 🐞 لتفعيل عرض الأخطاء مؤقتًا (اختياري أثناء التصحيح فقط)
 # DEBUG=True
+
+# 🛠️ عنوان الاتصال الكامل بقاعدة البيانات
+DATABASE_URL=postgresql://db_brubox_user:exeAzrE0Byn7r3JcZnGe9w8bpn8TuGfX@dpg-d20fh8h5pdvs73cgfd40-a.oregon-postgres.render.com:5432/db_brubox
